--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,13 @@
     <title>TODO app</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
-
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-    <script src="main.js"></script>
+    <script src="app/app.js"></script>
 
-    <script type="text/javascript" src="/js/bootstrap-datetimepicker.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap-datetimepicker.min.css" />
+    <script type="text/javascript" src="/app/js/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet" href="/app/css/bootstrap-datetimepicker.min.css" />
 </head>
 
 <body ng-controller="mainController">
@@ -49,18 +47,6 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript">
-        /*$(function () {
-            var dtp = $('#duedate').datetimepicker({
-                format: 'YYYY-MM-DD'
-            });
-
-            dtp.on("dp.change", function (e) {
-                console.log(moment(e.date).format("YYYY-MM-DD"));
-                $('.datetimepicker').val(moment(e.date).format("YYYY-MM-DD"));
-            });
-        });*/
-    </script>
 
 </body>
 
